# KeyGuard

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: AGENT.md  ARCHITECTURE.md  ERROR_MESSAGES_AUDIT.md  PLAN.md  PRD.md  TEST_REPORT.md  THREAT_MODEL.md  project-&-code-explanation.md
docs_site/: cli.md  faq.md  how-it-works.md  index.md  providers.md  quickstart.md  security.md
scripts/: package_binaries.py
src/keyguard/: __init__.py
src/keyguard/cli/: _unlock.py  hook.py  main.py  ui.py
src/keyguard/cli/commands/: add.py  copy.py  hooks.py  init.py  list_cmd.py  rotate.py  scan.py  show.py
src/keyguard/core/: audit.py  crypto.py  errors.py  keychain.py  models.py  session.py  totp.py  vault.py
src/keyguard/core/providers/: _http.py  anthropic.py  base.py  openai.py  registry.py  stripe.py
src/keyguard/core/scanner/: fileshunt.py  gitleaks.py  matcher.py
tests/integration/: test_end_to_end.py
tests/unit/: test_audit.py  test_cli.py  test_crypto.py  test_errors.py  test_keychain.py  test_models.py  test_scanner.py  test_session.py  test_smoke.py  test_totp.py  test_vault.py
tests/unit/test_providers/: test_anthropic.py  test_openai.py  test_registry.py  test_stripe.py
