[project]
name = "keyguard"
version = "0.0.0"
description = "Local-first encrypted vault with leak scanner and provider rotation for API keys."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KeyGuard Authors" }]
keywords = ["security", "secrets", "vault", "api-keys", "rotation", "scanner"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "questionary>=2.0.1",
    "cryptography>=42.0.5",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "pydantic>=2.6.4",
    "keyring>=24.3.1",
    "platformdirs>=4.2.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "qrcode>=7.4.2",
    "pyperclip>=1.9.0",
]

[project.scripts]
keyguard = "keyguard.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.99.13",
    "respx>=0.21.1",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.3",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs-material>=9.5.17",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keyguard"]

# Build mypy from source instead of using its mypyc-compiled wheel. The
# compiled extension modules ship with generated DLL names (e.g.
# `<hash>__mypyc.pyd`) that trip Windows Application Control / Smart App
# Control on some developer machines. Source builds have the same behavior
# and do not include the flagged extensions.
[tool.uv]
no-binary-package = ["mypy"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "S",             # flake8-bandit
    "N",             # pep8-naming
    "RUF",           # ruff-specific
    "SIM",           # simplify
    "TID",           # tidy imports
    "PTH",           # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts + literal "password" strings are fine in tests

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["argon2.*", "pyotp.*", "keyring.*", "qrcode.*", "pyperclip.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real external services; opt-in via KEYGUARD_INTEGRATION=1",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/keyguard"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "vendor"]
